--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "main": "./lib/hitman",
   "author": "vk@whitescape.com",
   "license": "MIT",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "*Proof-of-Concept* Time tracker for Done! app. https://testflight.apple.com/join/7JgET9cr",
-  "keywords": [ "trello", "harvest", "tracker" ],
+  "keywords": [
+    "trello",
+    "harvest",
+    "tracker"
+  ],
   "activationCommands": {
     "hitman-workspace": "hitman:auth"
   },
   "repository": "https://github.com/whitescape/done-atom.git",
-  "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
