--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "main": "./lib/hitman",
   "author": "vk@whitescape.com",
   "license": "MIT",
-  "version": "0.2.0",
-  "description": "*Proof-of-Concept* Time tracker for Done! app. https://testflight.apple.com/join/7JgET9cr",
+  "version": "0.2.1",
+  "description": "Coding time tracker for Done! app",
   "keywords": [
     "trello",
     "harvest",
